Fix CTA images to use correct file extensions and remove gap between navbar and hero videos

--- a/css/sintered-stone.css
+++ b/css/sintered-stone.css
@@ -12,6 +12,7 @@ body {
   position: relative;
   width: 100%;
   height: 100vh;
+  margin-top: 0;
   background: #f5f5f5;
   display: flex;
   align-items: flex-end;
