--- a/css/styles.css
+++ b/css/styles.css
@@ -205,6 +205,7 @@ main {
   position: relative;
   width: 100%;
   height: 100vh;
+  margin-top: 0;
   background: #f5f5f5;
   display: flex;
   align-items: flex-end;
